// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secret switch field component should render correctly in edit mode 1`] = `
<SecretSwitchField
  FieldProvider={[Function]}
  cancelEditLabel="Cancel"
  changeEditLabel="Change"
  edit={true}
  formOptions={
    Object {
      "change": [MockFunction],
      "getState": [MockFunction],
      "renderForm": [Function],
    }
  }
  isDisabled={false}
>
  <DummyComponent
    buttonLabel="Change"
    component="credentials-password-edit"
    editMode={true}
    isDisabled={false}
    placeholder="●●●●●●●●"
    setEditMode={[Function]}
    type="password"
    validateOnMount={true}
  >
    <button
      component="credentials-password-edit"
      disabled={false}
      onClick={[Function]}
      placeholder="●●●●●●●●"
      type="button"
    >
      Change
    </button>
  </DummyComponent>
</SecretSwitchField>
`;

exports[`Secret switch field component should render correctly in non edit mode 1`] = `
<SecretSwitchField
  FieldProvider={[Function]}
  cancelEditLabel="Cancel"
  changeEditLabel="Change"
  edit={false}
  formOptions={
    Object {
      "change": [MockFunction],
      "getState": [MockFunction],
      "renderForm": [Function],
    }
  }
  isDisabled={false}
>
  <DummyComponent
    component="text-field"
    isDisabled={false}
    type="password"
    validate={false}
    validateOnMount={true}
  >
    <button
      component="text-field"
      disabled={false}
      type="button"
    >
      Dummy
    </button>
  </DummyComponent>
</SecretSwitchField>
`;
